--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.12.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
